--- a/v354/content/diskussion.tex
+++ b/v354/content/diskussion.tex
@@ -1,13 +1,13 @@
 \section{Diskussion}
 \label{sec:Diskussion}
 %\subsection{Diskussion der Messergebnisse zur zeitabhängigkeit der Amplitude mit Betrachtung des Dämpfungswiderstandes}
-Unter Berücksichtigung des angegeben Innenwiderstand des Generators \autoref{subsec:AuswertungA} stimmen die gemessenen Daten gut mit den Theoriewerten überein. 
-Bei der Bestimmung des Widerstandes zum aperiodischen Grenzfall liegt die absolute Abweichung bei 1.23 \unit{\kilo\ohm}. Dieser Wert ist nicht im Rahmen der Messunsicherheit 
+Unter Berücksichtigung des angegeben Innenwiderstand des Generators (siehe \autoref{subsec:AuswertungA}) stimmen die Messdaten der ersten Messung gut mit den Theoriewerten überein. \\
+Bei der Bestimmung des Widerstandes zum aperiodischen Grenzfall liegt die absolute Abweichung bei $1.23 \unit{\kilo\ohm}$. Dieser Wert ist nicht im Rahmen der Messunsicherheit 
 erklärbar. Eine mögliche Ursache dafür könnte sich zusammensetzen aus der ungenauen Auflösung bzw. der dicke des Graphen vom Oszilloskop, weshalb nicht möglichst genau abgelesen 
-werden kann wann der aperiodische Grenzfall eintritt. Dazu könnte es sich Aufgrung der größe des Fehler auch noch im einen systematischen Fehler handeln. 
+werden kann wann der aperiodische Grenzfall eintritt. Dazu könnte es sich aufgrund der größe des Fehler auch noch um einen systematischen Fehler handeln. \\ 
 Die Freuquenzabhängigkeit der Kondensatorspannung ist mit einer Abweichung von $\Delta \nu_{\text{diff}} = 2.67\%$ im Rahmen der Messunsicherheit ausreichend genau bestimmt.
 Zur Freuquenzabhängigkeit der Phase sind die absoluten Fehler $\Delta \nu_1 = 0.64 \unit{\kilo\hertz}$ und $\Delta \nu_2 = 0.65 \unit{\kilo\hertz}$. Diese Abweichung liegt nicht
 in der Unsicherheit der Theorie. Dennoch sollte kein systematischer Fehler vorliegen, da man diese Abweichung durch eine doppelte Ableseungenauigkeit erklären kann. Diese tritt 
 auf, da man hier zwei der Linien auf dem Oszilloskop ablesen muss, die jeweils eine kleinere Abweichung mit sich bringen.  
 Alle kleineren Abweichung sind durch Ableseungenauigkeit zu erklären, da man am Oszilloskop durch Liniendicke und Augenmaß Werte nicht exakt ablesen kann.
-Des weiteren kann es Aufgrund des Messumfangs bei der erstellten Regression zu einem Fehler kommen. 
+Des weiteren kann es Aufgrund des geringen Messumfangs bei der erstellten Regression zu einem Fehler kommen. 
