--- a/programme.bib
+++ b/programme.bib
@@ -37,3 +37,10 @@
   url = "http://pythonhosted.org/uncertainties/",
   version = "2.4.6.1"
 }
+
+@software{paint3d,
+  author = "Microsoft Corporation",
+  title  = "Paint 3D",
+  url = "https://www.microsoft.com/de-de/p/paint-3d/9nblggh5fv99",
+  version = "6.2105.4017.0"
+}
