theorie fast feddig und aenderungen an litbib und header

--- a/header.tex
+++ b/header.tex
@@ -11,6 +11,7 @@
 \usepackage[aux]{rerunfilecheck}
 
 % unverzichtbare Mathe-Befehle
+\usepackage[f]{esvect}
 \usepackage{amsmath}
 % viele Mathe-Symbole
 \usepackage{amssymb}
