--- a/lit.bib
+++ b/lit.bib
@@ -25,3 +25,25 @@
 	date         = {1992},
   edition      = {2}
 }
+
+@online{Helmholtzspulenpaar
+	title		 = {Skizze eines Helmholtzspulenpaares},
+	organization = {Wikipedia},
+	urldate		 = {2021-11-24},
+	url 		 = {https://de.wikipedia.org/wiki/Helmholtz-Spule#/media/Datei:Helmholtz_coils.png}
+}
+
+@online{v105,
+	title        = {V105 - Das Magnetische Moment},
+	organization = {TU Dortmund},
+	urldate      = {2021-11-24},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1712442/mod_resource/content/1/V353.pdf},
+}
+
+@book{Demtröder_Exp_P_1,
+	author       = {Professor Dr. Wolfgang Demtröder},
+	title        = {Experimentalphysik 1 Mechanik und Wärme},
+	publisher    = {Springer},
+	date         = {2021-11-24},
+    edition      = {4}
+}
