--- a/lit.bib
+++ b/lit.bib
@@ -26,7 +26,7 @@
   edition      = {2}
 }
 
-@online{Helmholtzspulenpaar
+@online{Helmholtzspulenpaar,
 	title		 = {Skizze eines Helmholtzspulenpaares},
 	organization = {Wikipedia},
 	urldate		 = {2021-11-24},
