Theorie eig feddig

--- a/v105/content/theorie.tex
+++ b/v105/content/theorie.tex
@@ -72,7 +72,7 @@ nach Integration durch
     \label{eqn:Biot-Savart_1}
     \vv{B}(x) = \frac{\mu_0 I}{2}\frac{R^2}{\left(R^2 + x^2 \right)^{(3/2)}}\cdot \vec{e}_x
 \end{equation}
-berechnet werden. Hierbei wir die Symetrieachse als x-Achse definiert(vgl. \autoref{Helmholtzspulenpaar1}). Das "x" entspricht hier dem halben Abstand der beiden Spulen. 
+berechnet werden. Hierbei wir die Symetrieachse als x-Achse definiert(vgl. \autoref{fig:Helmholtzspulenpaar1}). Das "x" entspricht hier dem halben Abstand der beiden Spulen. 
 \begin{figure}
 	\centering
     \includegraphics[width=0.4\textwidth]{content/Helmholtzachsen.PNG}
